# codexskin

./: .gitignore  ASSET_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.zh-CN.md  NOTICE.md  README.md  README_EN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-zh.md  bug-report.md  compatibility-report-zh.md  compatibility-report.md  feature-request-zh.md  feature-request.md  theme-submission-zh.md  theme-submission.md
docs/en/: ASSET_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
docs/superpowers/plans/: 2026-07-17-codeskin-runtime-theme-tool.md  2026-07-17-immersive-codeskin-theme.md
docs/superpowers/reviews/: 2026-07-17-final-acceptance.md  2026-07-17-task-1-theme-library-review-package.md  2026-07-17-task-2-wallpaper-palette-review-package.md  (+6 more)
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  error.rs  inject.js  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/cdp/: client.rs  local_endpoint.rs  mod.rs  reconnect.rs  targets.rs
src-tauri/src/injection/: mod.rs  registry.rs  runtime_behavior_test.js  scripts.rs  theme.rs
src-tauri/src/injection-js/: install.js  restore.js  verify.js
src-tauri/src/process/: discovery.rs  launcher.rs  mod.rs
src-tauri/src/storage/: backgrounds.rs  mod.rs  palette.rs  themes.rs
(+1 files in other folders)
