[package]
name = "codeskin"
version = "0.1.0"
description = "Non-official runtime theme tool for Codex Desktop"
authors = ["CodeSkin contributors"]
edition = "2021"

[lib]
name = "codeskin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
sysinfo = "0.30"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
